--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@hairy/share": "^0.0.2",
@@ -19,6 +20,20 @@
     "vite": "^2.8.0",
     "vite-plugin-windicss": "^1.8.3",
     "vue-tsc": "^0.29.8",
-    "windicss": "^3.5.1"
+    "windicss": "^3.5.1",
+    "husky": "^7.0.4",
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,vue,ts}": [
+      "eslint --fix"
+    ]
   }
 }
