--- a/package.json
+++ b/package.json
@@ -10,20 +10,23 @@
   },
   "dependencies": {
     "@hairy/share": "^0.0.2",
-    "vue": "^3.2.25"
+    "lodash": "^4.17.21",
+    "pinia": "^2.0.12",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.1.0",
+    "@commitlint/config-conventional": "^16.0.0",
     "@hairy/eslint": "^1.0.13",
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
+    "husky": "^7.0.4",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vite-plugin-windicss": "^1.8.3",
     "vue-tsc": "^0.29.8",
-    "windicss": "^3.5.1",
-    "husky": "^7.0.4",
-    "@commitlint/cli": "^16.1.0",
-    "@commitlint/config-conventional": "^16.0.0"
+    "windicss": "^3.5.1"
   },
   "husky": {
     "hooks": {
