--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@hairy/share": "^0.0.2",
     "@hairy/utils": "^1.0.19",
+    "@vueuse/core": "^8.2.0",
     "lodash": "^4.17.21",
     "pinia": "^2.0.12",
+    "pinia-plugin-persist": "^1.0.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -23,6 +25,7 @@
     "@vitejs/plugin-vue": "^2.2.0",
     "@vitejs/plugin-vue-jsx": "^1.3.8",
     "husky": "^7.0.4",
+    "sass": "^1.49.9",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
     "vite-plugin-windicss": "^1.8.3",
