--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "dependencies": {
     "@hairy/share": "^0.0.2",
     "@hairy/utils": "^1.0.19",
+    "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^8.2.0",
     "lodash": "^4.17.21",
+    "naive-ui": "^2.27.0",
     "pinia": "^2.0.12",
     "pinia-plugin-persist": "^1.0.0",
+    "vfonts": "^0.0.3",
     "vue": "^3.2.25",
     "vue-router": "^4.0.14"
   },
@@ -27,6 +30,7 @@
     "husky": "^7.0.4",
     "sass": "^1.49.9",
     "typescript": "^4.5.4",
+    "unplugin-vue-components": "^0.18.5",
     "vite": "^2.8.0",
     "vite-plugin-windicss": "^1.8.3",
     "vue-tsc": "^0.29.8",
