--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@types/mockjs": "^1.0.6",
     "@vicons/ionicons5": "^0.12.0",
     "@vueuse/core": "^8.2.0",
+    "@vueuse/router": "^8.2.1",
     "axios": "^0.26.1",
+    "dayjs": "^1.11.0",
     "lodash": "^4.17.21",
     "mockjs": "^1.1.0",
     "naive-ui": "^2.27.0",
