--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "pinia-plugin-persist": "^1.0.0",
     "vfonts": "^0.0.3",
     "vue": "^3.2.25",
+    "vue-demi": "^0.12.5",
     "vue-router": "^4.0.14"
   },
   "devDependencies": {
